--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </p>
       </div>
       <button id="showhide" class="flex items-center gap-2">
-        <svg
+        <svg id="moon1" class="show"
           fill="#fff"
           width="20px"
           height="20px"
@@ -33,8 +33,8 @@
           ></path>
           <rect x="0" y="0" width="36" height="36" fill-opacity="0" />
         </svg>
-        <svg id="moon" class="moon"
-          fill="#fff"
+        <svg id="moon2" class="hide"
+          fill="#000000"
           width="18px"
           height="18px"
           viewBox="0 0 36 36"
@@ -50,12 +50,13 @@
           ></path>
           <rect x="0" y="0" width="36" height="36" fill-opacity="0" />
         </svg>
-        <span class="dark:text-white text-[18px] font-medium">Light Mode</span>
+        <span id="darkMode" class="show dark:text-white text-[18px] font-medium">Light Mode</span>
+        <span id="lightMode" class="hide dark:text-white text-[18px] font-medium">Dark Mode</span>
       </button>
     </header>
-    <main>
-      <ul id="container" class="flex flex-wrap p-20">
-        <li
+    <main class="p-20">
+      <ul id="container" class="flex flex-wrap justify-center gap-20">
+        <!-- <li
           class="flex flex-col rounded-[6px] overflow-hidden hover:scale-105 dark:bg-[#2B3945]"
         >
           <img class="w-[260px] h-[160px]" src="src/imag/one.svg" />
@@ -73,7 +74,7 @@
               </p>
             </div>
           </div>
-        </li>
+        </li> -->
       </ul>
     </main>
     <script type="module" src="/src/main.js"></script>
